# contract-redliner-pro

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
data/: nda_sample.txt  playbook.json
src/contract_redliner/agents/: workflow.py
src/contract_redliner/api/: main.py
src/contract_redliner/core/: config.py  models.py  playbook.py  prompts.py
src/contract_redliner/integrations/: factory.py  gemini_client.py  llm_base.py  mock_client.py  openai_client.py
src/contract_redliner/services/: docx_exporter.py  review_service.py
src/contract_redliner/ui/: streamlit_app.py
src/contract_redliner/utils/: text.py
tests/: test_smoke.py
